This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

12-May-2010 (Gnomi)
  - Corrected the call to mysql_options. Use the generic error message
    when mysql returned an empty one.
    (pkg-mysql.c)

04-May-2010 (Fuchur)
  - enable automatic reconnects on MySQL database handles. (see #750)
    (pkg-mysql.c, doc/concepts/mysql, doc/efun[.de]/db_connect[.de])

04-May-2010 (Gnomi)
  - Corrected wrong follow-up error messages about bad efun arguments.
    (prolang.y)

03-May-2010 (Gnomi)
  - insert_inherited() returned the function index for the first match
    and the program pointer for the last match on wildcarded super calls,
    resulting in memory access beyond the program block.
    (prolang.y)
  - The check for deprecated variables didn't take the number of virtual
    variables into account while looking up a variable index in the
    non-virtual variable block.
    (prolang.y)
  - Corrected an error message for wrong types in restore_object().
    (object.c)

13-Feb-2010 (Zesstra)
  - Fixed Div-by-Zero in svalue_size().
    svalue_size() divides the memory used for a string by its refcount, but
    0 refs are valid for strings. This leads to a crash in then wiz command
    'dumpallobj', unless the refcount is checked before division. (#725).
    (dumpstat.c)

10-Feb-2010 (Gnomi)
  - optpat() shouldn't read over the end of the given ed command. (#722)
    (ed.c)

08-Feb-2010 (Gnomi)
  - Explicit context variables overwrote the types of the closure's
    arguments. (#711)
    (prolang.y)

31-Jan-2010 (Zesstra)
  - Increased UDP receive buffer, because UDP datagrams can be much larger
    than 1024 bytes and the rest of the datagram would be discarded upon
    recvfrom(). Datagram lengths up to 65507 bytes (including UDP and IPv4
    headers: 65535) are supported now.
    (comm.c)
  - Removed dirty BeOS hack. (comm.c)

27-Jan-2010 (Gnomi)